--- a/index.html
+++ b/index.html
@@ -7,9 +7,21 @@
   <link href="test1.css" rel="stylesheet" />
   </hgroup>
 </head>
+<script>
+  function ausgabe(vorname) {
+    alert('Hey, ' + vorname +
+      ', traue niemals den Kamelen in der Wüste von Gizeh!');
+  }
+  var name = 'Sonja';
+  ausgabe(name);
+</script>
 
 <body>
-
+  <h1>Hi!</h1>
+  <script>
+    var inhalt = "Na, wie gehts?";
+    document.write(inhalt)
+  </script>
 </body>
 
 </html>
